codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__alarms__thread_alarms_popup_keeps_selected_alarm_prompt_visible.snap
---
source: tui/src/chatwidget/tests/alarms.rs
expression: popup
---
  Thread alarms
  Review an alarm, then press Enter to delete it.

› 1. @after-turn  Give me a random animal name.
                  Press Enter to delete this alarm.

  Press enter to confirm or esc to go back
